argocd-managed/argo-workflows/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-server
  namespace: argo
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/backend-protocol: https # ingress-nginx
spec:
  rules:
    - host: localhost
      http:
        paths:
        - backend:
            service:
              name: argo-server
              port:
                number: 2746
          path: /argo/(.*)
          pathType: Prefix
        - backend:
            service:
              name: argo-server
              port:
                number: 2746
          path: /argo
          pathType: Prefix
